CHANGES IN VERSION 1.14 (currently 1.13.x)
-------------------------

NEW FEATURES

    o Added max method as an option in consensusScores().

BUG FIXES

    o Updated the p-value calculation (while using gene permutation) from:
         sum(background >= value) / length(background)
      to:
         (sum(background >= value) + 1) / (length(background) + 1)
      where bakground is a vector of permuted gene-set statistics and value
      is the actual calculated gene-set statistic. This change avoids returning
      p-values = 0, instead the theoretically smallest possible p-value will be
      determined by the number of permutations used. E.g. for nPerm = 10000,
      the smallest p-value will be 1 / 10001 = 9.999e-05.

    o Improved speed of checkLoadArg().

CHANGES IN VERSION 1.12
-----------------------
    o No changes
	
CHANGES IN VERSION 1.10.2
-------------------------

DOCUMENTATION

    o Updated the vignette R code to avoid an error in the call to biomart
	    throught the getBM function.

CHANGES IN VERSION 1.10.1
-------------------------

BUG FIXES

    o Fixed a bug in runGSA which returned wrong numbers for the up- and down-
	    regulated genes, for the GSEA method.
	
CHANGES IN VERSION 1.8.2
-------------------------

BUG FIXES

    o Updated loading of suggested packages from using require() to requireNamespace()
      instead.

CHANGES IN VERSION 1.6.2
-------------------------

BUG FIXES

    o Fixed a bug in loadMAdata so that normalizing using MAS5 is now returning 
      log2-transformed expression values.

CHANGES IN VERSION 1.6.1
-------------------------

DOCUMENTATION

    o Updated this NEWS file

CHANGES IN VERSION 1.6.0 
-------------------------

NEW FEATURES

    o Added a function writeFilesForKiwi() that enables a seamless integration of the
      output from a gene set analysis with piano to the network-based visualization
      offered by the python tool Kiwi.

CHANGES IN VERSION 1.4.2
-------------------------

BUG FIXES
