@@ -1,7 +1,7 @@
 Package: piano
 Type: Package
 Title: Platform for integrative analysis of omics data
-Version: 1.13.2
+Version: 1.13.3
 Date: 2016-08-15
 Author@R: c(person("Leif", "Varemo", email = "piano.rpkg@gmail.com",
         role = "aut"), person("Intawat", "Nookaew", email =
